--- a/style.css
+++ b/style.css
@@ -1,7 +1,45 @@
 /*Cada uma dessas tags é vista como uma caixa e pode receber modificações de estilo*/
+* {
+    margin: 0;
+    padding: 0;
+}
+header {
+    background: #BBBBBB;
+    padding: 20px 0;
+    margin-bottom: 3px;
+}
 
-body {
+.box {
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
+}
 
+.menu {
+    display: flex;
+}
+
+nav {
+    position: absolute;
+    top: 110px;
+    right: 0px;
+}
+nav li {
+    display: inline;
+    margin: 0 0 0 15px;
+}
+
+nav a {
+    text-transform: uppercase;/* para deixar todas as letras com a aparência de maiusculas */
+    color: #000000;
+    font-weight: bold; 
+    font-size: 22px;
+    text-decoration: none;
+}
+
+nav a:hover {
+    color: #C78C19;
+    text-decoration: underline;
 }
 
 #banner {
@@ -14,7 +52,9 @@ body {
 }
 
 .titulo-principal {
-    padding-left: 20px;
+    text-transform: uppercase;
+    font-size: 30px;
+
 }
 
 .titulo-centralizado {
@@ -56,4 +96,17 @@ ul {
 
 .beneficios {
     width: 50%;
+}
+
+footer {
+    text-align: center;
+    background: url(imagens_produtos/bg.jpg);
+    padding: 40px 0;
+}
+
+.copyright {
+    color: #FFFFFF;
+    font-size: 13px;
+    margin: 20px 0 0;
+
 }
