--- a/style.css
+++ b/style.css
@@ -1,22 +1,12 @@
-/*Cada uma dessas tags é vista como uma caixa e pode receber modificações de estilo*/
-* {
-    margin: 0;
-    padding: 0;
-}
 header {
     background: #BBBBBB;
     padding: 20px 0;
-    margin-bottom: 3px;
 }
 
 .box {
     position: relative;
     width: 940px;
     margin: 0 auto;
-}
-
-.menu {
-    display: flex;
 }
 
 nav {
@@ -42,60 +32,49 @@ nav a:hover {
     text-decoration: underline;
 }
 
-#banner {
-    width: 100%;
+.products {
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
 }
 
-.principal {
-    background: #cccccc;
-    padding: 30px;
+.products li {
+    display: inline-block;
+    text-align: center;
+    width: 30%; /* faz com que os elementos ocupem uma parte do espaço da tela. No caso, 1/3 ou 30% */
+    vertical-align: top; /* alinha os itens pela linha de cima */
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid #000000;  /*border-color: #000000; border-width: 2px; border-style: solid;*/
+    border-radius: 10px; /* também é possível declarar cada um dos cantos e fazer com que cada ponta tenha um raio diferente */
+}
+ 
+.products li:hover {
+    border-color: #C78C19;
 }
 
-.titulo-principal {
-    text-transform: uppercase;
+.products li:active {
+    border-color: #088C19;
+}
+
+.products li:hover h2 {
+    font-size: 34px;
+}
+
+.products h2 {
     font-size: 30px;
-
+    font-weight: bold; /* peso da fonte */
 }
 
-.titulo-centralizado {
-    text-align: center;
-    /* height: 150px;
-    border: 10px solid #000000;
-    padding-top: 20px; -serve para inserir um espaçamento interno no bloco do elemento
-    margin: 40px; -serve para inserir um espaçamento fora no bloco do elemento  */
+.product-description {
+    font-size: 18px;
 }
 
-p {
-    text-align: center;
-}
-
-#missao {
-    font-size: 20px;
-}
-
-em strong {
-    color: #ff0000;
-}
-
-.itens {
-    font-style: italic;
-}
-
-.beneficios {
-    background: #ffffff;
-    padding: 20px;
-}
-
-ul {
-    display: inline-block;/* serve para organizar os itens para que ele ocupe somente o tamanho do conteúdo, mas deixa mexer na largura e espaçamentos*/
-    vertical-align: top;/* por padrao o css alinha de baixo, para mudar isso usamos o top para alinhar com o topo*/
-    width: 20%;
-    margin-right: 15%;/* margem direita*/
-
-}
-
-.beneficios {
-    width: 50%;
+.product-price {
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 10px; /* também poderia ser margin: 10px 0 0; */
 }
 
 footer {
@@ -109,4 +88,63 @@ footer {
     font-size: 13px;
     margin: 20px 0 0;
 
+}
+
+main {
+    width: 940px;
+    margin: 0 auto;
+}
+
+form {
+    margin: 40px 0;
+}
+
+form label, form legend {
+    display: block;
+    font-size: 20px;
+    margin: 0 0 10px;
+}
+
+.input-padrao {
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
+}
+
+.checkbox {
+    margin: 20px 0;
+}
+
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    background: orange;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all; /* all- todos os elementos, poderia ser somente o background | transition- serve para atrasar uma ação por um tempo determinado */
+
+}
+
+.enviar:hover {
+    background: darkorange;
+    transform: scale(1.2);
+}
+
+table {
+    margin: 20px 0 40px;
+}
+
+thead {
+    background: #555555;
+    color: white;
+    font-weight: bold;
+
+}
+td, th {
+    border: 1px solid #000000;
+    padding: 15px 8px;
 }
