--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+body {
+    font-family: 'Montserrat', sans-serif;
+}
 header {
     background: #BBBBBB;
     padding: 20px 0;
@@ -90,13 +95,9 @@ footer {
 
 }
 
-main {
-    width: 940px;
-    margin: 0 auto;
-}
-
 form {
     margin: 40px 0;
+    padding: 0 15%;
 }
 
 form label, form legend {
@@ -135,7 +136,8 @@ form label, form legend {
 }
 
 table {
-    margin: 20px 0 40px;
+    margin: 20px 15% 40px;
+    padding: 15%;
 }
 
 thead {
@@ -147,4 +149,150 @@ thead {
 td, th {
     border: 1px solid #000000;
     padding: 15px 8px;
+}
+
+/* css página inicial*/
+.banner {
+    width: 100%;
+}
+
+.titulo-principal {
+    text-align: center;
+    font-size: 2em; /* em o dobro do tamanho da fonte normal*/
+    margin: 0 0 1em;
+    clear: left;
+    color: rgba(0,0,0,0.7); /* cor em rgb pode ter também o atributo alpha, rgba, de transparencia*/
+}
+
+.principal {
+    padding: 3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0 auto;
+}
+
+.principal p {
+    margin: 0 0 1em;
+}
+
+.principal strong {
+    font-weight: bold;
+
+}
+
+.principal em {
+    font-style: italic;
+}
+
+.utensilios {
+    width: 120px;
+    float: left; /* faz com que o texto fique descolado, flutuando na pagina*/
+    margin: 0 20px 20px 0;
+}
+
+.mapa {
+    padding: 3em 0;
+    background: linear-gradient(#FEFEFE, #888888);
+}
+
+.mapa-conteudo {
+    width: 940px;
+    margin: 0 auto;
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+.beneficios {
+    padding: 3em 0;
+    background: #888888;
+    
+}
+
+.conteudo-beneficios {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-beneficios {
+    width: 40%;
+    display: inline-block; /* para funcionar não pode conter espaços entre uma tag e outra no html*/
+    vertical-align: top;
+}
+
+.itens {
+    line-height: 1.5;
+}
+        /* é possível marcar somente o primeiro elemento apenas usando essa pseudo-classe*/
+.itens:first-child {
+    font-weight: bold;
+}
+
+.itens:before {
+    content: "★ ";
+}
+
+.imagem-beneficios {
+    width: 60%;
+    opacity: 1;
+    transition: 400ms;
+    box-shadow: 10px 10px 10px 0 #000000;
+}
+
+.imagem-beneficios:hover {   
+    opacity: 0.3;
+}
+
+.video {
+    width: 560px;
+    margin: 2em auto;
+}
+
+@media screen and (max-width: 480px) {
+    .box, .principal, .conteudo-beneficios, .mapa-conteudo {
+        width: auto;
+    }
+
+    .video{
+        width: 90%;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+        margin: 10px;
+    }
+
+    .lista-beneficios, .imagem-beneficios {
+        width: 100%;
+    }
+
+    form, fielset{
+        width: 90%;
+        margin: 10px;
+        padding: 5%; 
+    }
+
+    .enviar {
+        width: 95%;
+    }
+
+    .input-padrao {
+        width: 80%;
+    }
+
+    table {
+        width: 70%;
+    }
+
+    .products li {
+        display: block;
+        margin:  10px 0 10% 7%;
+        padding: 5px;
+    }
+    
 }
